fix html tag replacement

--- a/test/src/index.html
+++ b/test/src/index.html
@@ -8,6 +8,12 @@
 
     <link rel="stylesheet" href="styles/mdl2-icons.min.css">
     <link rel="stylesheet" href="styles/app.css">
+
+    <style>
+        .foo {
+            color: red;
+        }
+    </style>
 </head>
 <body>
 
@@ -36,6 +42,9 @@
         </div>
     </div>
 
+    <script>
+        var foo = 'bar';
+    </script>
     
 </body>
 </html>
